--- a/Self.GroupInsurance.Web/appsettings.json
+++ b/Self.GroupInsurance.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "URI": "http://localhost:55105/api/Employee/"
+  }
 }
