--- a/Self.GroupInsurance.Web/appsettings.json
+++ b/Self.GroupInsurance.Web/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "URI": "http://localhost:55105/api/Employee/"
+    "URI": "http://localhost:55105/api/"
   }
 }
